syntax = "proto3";

option java_multiple_files = false;

option java_package = "com.mloine.news.proto";

option java_outer_classname = "NewsProto";

package news;

service NewsService {
  rpc list(NewsRequest) returns (NewsResponse) {}
  rpc hello(StringRequest) returns (StringResponse) {}
}

message NewsRequest{
  string date = 1;
}

message NewsResponse{
  repeated News news = 1;
}

message News{
  int32 id = 1;
  string title = 2;
  string content = 3;
  int64  createTime = 4;
}

message StringRequest{
  string name = 1;
}

message StringResponse{
  string result = 1;
}